crates/ars-collections/tests/ui/tab_key_unknown_key_kind.rs
use ars_collections::TabKey;

#[derive(TabKey)]
enum BadTab {
    #[tab_key(slug = "profile")]
    Profile,
}

fn main() {}
